1.优化接口 2.补充直接删除的接口实现